fix styles, add calculator logic

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <div id="display">0</div>
         </div>
         <div class="row">
-            <button>AC</button>
-            <button>+/-</button>
-            <button>%</button>
+            <button id="clear">AC</button>
             <button class="operator">/</button>
         </div>
         <div class="row">
@@ -40,8 +38,7 @@
         </div>
         <div class="row">
             <button id="zero" class="digit">0</button>
-            <button>.</button>
-            <button>=</button>
+            <button id="equals">=</button>
         </div>
     </div>
 </body>
